# who-is-building-starter

./: .gitignore  Makefile  main.py  pyproject.toml  requirements.txt  swagger.yaml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: projects.py  users.py
app/core/: config.py
app/crud/: base.py  crud_project.py  crud_user.py
app/models/: project.py  user.py
app/routes/: project_routes.py  user_routes.py
app/schemas/: project.py  user.py
tests/: conftest.py  test_users.py
